renaming, address concurrency issues